--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gaslimitreached/greeter",
+  "name": "@cachemonet/greeter",
   "repository": {
     "type": "git",
     "url": "https://github.com/gaslimitreached/greeter.git"
@@ -45,7 +45,6 @@
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/",
     "access": "public"
   },
   "version": "0.0.0",
